--- a/voice.html
+++ b/voice.html
@@ -86,13 +86,13 @@
             <img src="static/images/voice/voice-samurai.png" alt="voice-samurai.png" class="voice_chara_img">
           </div>
           <div class="voice-box-message voice-box-lower voice-container">
-            <img src="static/images/voice/fukidasi_yellow.png" alt="fukidasi.png" class="fukidasi-img">
+            <img src="static/images/voice/fukidasi_yellow.png" alt="fukidasi.png" class="fukidasi-y-img">
             <img src="static/images/voice/fukidasi_yellow_short.png" alt="fukidasi.png" class="fukidasi-s-img">
             <div class="voice-text">
               <h1 class="voice-top">
-                当塾への参加者の声を紹介</h1>
-              <h2 class="voice-top-main">いろいろな年代、業種の方が一緒に勉強されています。 技術的レベルも、初心者から経験者の方まで様々です。
-              <br>興味を持たれた方、是非<a href="https://ocomoji.co.jp/">参加フォーム</a>よりご参加ください！</h2>
+                参加者の声を紹介</h1>
+              <h2 class="voice-top-main">コミュニティについてのご意見をまとめました。<br>いろいろな世代、業種の方が一緒に勉強されています。 学習レベルも、初心者から経験者の方まで様々です。
+              <br>興味を持たれた方は、是非<a href="https://forms.gle/N8ipEt2RFSs8bt4a9">こちら</a>より参加ください。</h2>
             </div>
           </div>
           </div>
@@ -106,7 +106,7 @@
               <p class="voice-main">
                 業種、年齢の枠を超えてコミュニケーションがとれて良い！<br>佐賀はICT先進地域なのになぜかIT企業少ないため盛り上げて行きたいですね。</p>
               <p class="voice-personal">
-                60代　男性 技術職/エンジニア<br>
+                60代男性 技術職/エンジニア<br>
                 プログラミング歴: 21年以上<br></p>
             </div>
           </div>
@@ -129,7 +129,7 @@
                 皆さんの様子を覗き見る事で、まだまだやれることが沢山あることに気付かされます。</p>
               <br>
               <p class="voice-personal">
-                50代　女性 事務/アシスタント<br>
+                50代女性 事務職<br>
                 プログラミング歴: ～1年<br></p>
             </div>
           </div>
@@ -145,7 +145,7 @@
                 独学だとすぐに挫折してしまうところ、皆さんの頑張りに刺激を受け自分なりに学習を続ける事ができています。
                 何より勉強会で手を動かしながらワチャワチャするのが楽しいです。</p>
               <p class="voice-personal">
-                40代　女性 事務/アシスタント<br>
+                40代女性 事務職<br>
                 プログラミング歴: ～3年<br></p>
             </div>
           </div>
@@ -168,7 +168,7 @@
                 各種プログラミングの情報を得られます。
                 <br></p>
               <p class="voice-personal">
-                40代　男性 技術職/エンジニア<br>
+                40代男性 技術職/エンジニア<br>
                 プログラミング歴: ～3年<br></p>
             </div>
           </div>
@@ -183,7 +183,7 @@
               <p class="voice-main">
                 知的な刺激を貰えます。それでいて、ゆるい雰囲気で自由。日常生活では出会えない多種多様な人々と、プログラミングを通して知り合えました。<br></p>
               <p class="voice-personal">
-                30代　女性 教育/研究職<br>
+                30代女性 教育/研究職<br>
                 プログラミング歴: ～3年<br></p>
             </div>
           </div>
@@ -207,7 +207,7 @@
                   <br></p>
                 <br>
                 <p class="voice-personal">
-                  60代　男性 医療/介護<br>
+                  60代男性 医療/介護<br>
                   プログラミング歴: ～1年<br></p>
               </div>
             </div>
@@ -222,7 +222,7 @@
               <p class="voice-main">
                 モチベーションが上がる！<br>web開発に興味がありますが、佐賀のおすすめスポット紹介や、趣味と癒しの小部屋チャンネル等、プログラミング以外の情報ももらっています。</p>
               <p class="voice-personal">
-                30代　女性 事務/アシスタント<br>
+                30代女性 事務職<br>
                 プログラミング歴: ～1年<br></p>
             </div>
           </div>
@@ -242,10 +242,10 @@
             <div class="voice-text">
               <p class="voice-main">
                 いろいろな情報が得られます。<br>
-                特定の分野やテーマについて興味のある人が集まって、一定期間一緒に学ぶ分科会または研究会のようなものが出来ればと思います。
+                特定の分野やテーマについて興味のある人が集まって一緒に学ぶ分科会、または研究会のようなものが出来ればと思います。
                 <br></p>
               <p class="voice-personal">
-                60代　教育/研究職<br>
+                60代男性 教育/研究職<br>
                 プログラミング歴: ～3年<br></p>
             </div>
           </div>
@@ -259,7 +259,7 @@
             <div class="voice-text-kumo">
               <p class="voice-bottom">
                 さあ、次はあなたの番です!<br>一緒に学びましょう!<br>
-              <a href="https://ocomoji.co.jp/">参加フォーム</a>よりご参加お待ちしています！</p>
+              <a href="https://forms.gle/N8ipEt2RFSs8bt4a9">参加フォーム</a>よりご参加お待ちしています！</p>
             </div>
           </div>
             <div class="voice-box-chara voice-box-upper">
