マッチコイン紹介

--- a/voice.html
+++ b/voice.html
@@ -26,7 +26,7 @@
   <!--  OGP-->
 
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-    <meta property="og:url" content="https://hagakurepgm.net/">
+    <meta property="og:url" content="https://hagakurepgm.net/voice">
     <meta property="og:type" content="website">
     <meta property="og:title" content="HAGAKURE_PROGRAMMING塾">
     <meta property="og:description" content="HAGAKURE PROGRAMMING塾｜参加者の声を紹介します。">
@@ -52,7 +52,7 @@
   <header class="wrapper_hp">
         <nav class="navbar navbar-expand-sm navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="https://hagakurepgm.net/">
+            <a class="navbar-brand" href="index">
               <img src="static/images/logo.png" alt="hagakure_logo" width="30">
             </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -62,10 +62,10 @@
               <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="https://hagakurepgm.net/">ホーム</a>
+                    <a class="nav-link" aria-current="page" href="index">ホーム</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="voice.html">塾生の声</a>
+                    <a class="nav-link" href="voice">塾生の声</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://forms.gle/N8ipEt2RFSs8bt4a9">参加フォーム</a>
