--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!--    </nav>-->
         <nav class="navbar navbar-expand-sm navbar-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="https://hagakurepgm.net/">
+            <a class="navbar-brand" href="index">
               <img src="static/images/logo.png" alt="hagakure_logo" width="30">
             </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -77,10 +77,10 @@
               <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="https://hagakurepgm.net/">ホーム</a>
+                    <a class="nav-link" aria-current="page" href="index">ホーム</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="voice.html">塾生の声</a>
+                    <a class="nav-link" href="voice">塾生の声</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://forms.gle/N8ipEt2RFSs8bt4a9">参加フォーム</a>
@@ -93,8 +93,6 @@
           </div>
         </nav>
   </header>
-
-
 <section>
     <main class="wrapper_hp main_visual">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -124,6 +122,11 @@
               <p class="main_title_p4">同志よ、共に学ぶでござる</p>
             </div>
           </div>
+          <div class="carousel-item matchcoin" data-bs-interval="7000">
+            <img src="static/images/matchcoin_img.png" class="d-block w-100" alt="matchcoin_img.png">
+            <a href="https://www.p-game.jp/game/344/detail"class="matchcoin_button">
+            <div class="matchcoin_div"></div></a>
+          </div>
           <div class="carousel-item transformerSAGA" data-bs-interval="7000">
             <img src="static/images/transformerSAGA.png" class="d-block w-100" alt="transformerSAGA.png">
             <a href="https://hagakurepgm.net/saga_bot"class="transformerSAGA_button">
@@ -143,6 +146,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="7000">
             <img src="static/images/kenshi_smartphone.jpg" class="w-100" alt="kenshi.jpg">
+          </div>
+          <div class="carousel-item matchcoin" data-bs-interval="7000">
+            <img src="static/images/matchcoin_smartphone.png" class="d-block w-100" alt="matchcoin_smartphone.png">
+            <a href="https://www.p-game.jp/game/344/detail"class="matchcoin_button">
+            <div class="matchcoin_div"></div></a>
           </div>
           <div class="carousel-item transformerSAGA" data-bs-interval="7000">
             <img src="static/images/transformerSAGA_smartphone.png" class="d-block w-100" alt="transformerSAGA_smartphone.png">
