title長くする。Formへの遷移をイベントとして設定。

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="description" content="佐賀のプログラミングコミュニティ。HAGAKURE PROGRAMMING塾のWebページ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WLK68MXV');</script>
+<!-- End Google Tag Manager -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQMQ82P18K"></script>
 <script>
@@ -45,10 +52,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
     <link rel="icon" href="static/images/favicon.ico">
-    <title>HAGAKUREプログラミング塾</title>
+    <title>HAGAKUREプログラミング塾｜佐賀でプログラミングを学ぶ人達のコミュニティです。</title>
   </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WLK68MXV"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <header class="wrapper_hp">
 <!--    <nav class="navbar navbar-expand navbar-light bg-light">-->
 <!--      <div class="container-fluid navbar_back_header">-->
@@ -66,10 +77,11 @@
 <!--      </div>-->
 <!--    </nav>-->
         <nav class="navbar navbar-expand-sm navbar-light">
-          <div class="container-fluid">
+          <div class="container-fluid menu_container">
             <a class="navbar-brand" href="index">
               <img src="static/images/logo.png" alt="hagakure_logo" width="30">
             </a>
+            <a class="voice-link" href="voice">塾生の声</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
